* v2 + uses emf to store values to Store 500 objects per chunk file. + uses LRU cache from JDT.

--- a/estore_demo/plugin.xml
+++ b/estore_demo/plugin.xml
@@ -42,4 +42,12 @@
       </view>
    </extension>
 
+   <extension point="org.eclipse.emf.ecore.generated_package">
+      <!-- @generated persistence -->
+      <package
+            uri="http:///com/xored/estore_demo/persistence.ecore"
+            class="com.xored.estore_demo.persistence.PersistencePackage"
+            genModel="model/persistence.genmodel"/>
+   </extension>
+
 </plugin>
